--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:mediarouter-v7:28.0.0'
     implementation 'com.android.support:gridlayout-v7:28.0.0'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
 
 
 }
